--- a/css/scss/components/_utilities.scss
+++ b/css/scss/components/_utilities.scss
@@ -1,16 +1,16 @@
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
 
-}
- */
+.no-gutters {
+    --bs-gutter-x: 0 !important;
+  }
+ 
 html, body {
     
     font-size: 16px;
     font-family: $font-roboto;
     font-weight: $font-weight-regular;
     color: $color-dark-3;
+
+    
 }
 a {
     text-decoration: none;
@@ -21,6 +21,8 @@ a {
         color: $color-theme-1;
     }
 }
+
+
 
 button {
     font-family: $font-poppins;
@@ -46,6 +48,19 @@ font-weight: $font-weight-regular;
         background-color: $color-dark-1;
         color: $color-white;
     }
+}
+
+footer {
+    div {
+        font-family: $font-poppins;
+        display: flex;
+        background-color: $color-dark-1;
+        justify-content: center;
+        align-items: center;
+        height: 66px;
+        color: $color-dark-4;
     }
+
+}
       
   
