--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -2,6 +2,7 @@
 @import './core/fonts';
 @import './core/colors';
 @import './core/mixins';
+@import './components/breadcrumb';
 
 @import './components/utilities';
 
