--- a/css/scss/core/_colors.scss
+++ b/css/scss/core/_colors.scss
@@ -9,6 +9,7 @@ $color-dark-1: #000000;
 $color-dark-2: #292929;
 $color-dark-3: #636363;
 $color-dark-4: #AEAEAE;
+$color-dark-5: #FAFAFA;
 
 $color-yellow: #F9c936;
 $color-green: #92BBB9;
