--- a/css/scss/components/_breadcrumb.scss
+++ b/css/scss/components/_breadcrumb.scss
@@ -1,6 +1,6 @@
 .breadcrumb {
     display: block;
-
+   
     @include lg {
         display: block;
         justify-content: center;
@@ -8,10 +8,14 @@
 
     .container {
         display: none;
-        width: 100%;
+       // max-width: 1290px;
         background-color: $color-dark-4;
         justify-content: center;
         align-items: center;
+        background-image: url(/images/placeholders/breadcrumb-bg.jpg);
+        background-position: center center;
+        
+       
 
         h2 {
             margin-top: 40px;
@@ -23,6 +27,9 @@
         }
         @include lg {
             display: flex;
+       
+            justify-content: center;
+        align-items: center;
 
         }
     }
