--- a/css/scss/components/_discount.scss
+++ b/css/scss/components/_discount.scss
@@ -1,14 +1,17 @@
 ._discount {
     background-color: $color-theme-2;
+    display: block;
+  
     .container {
         display: block;
-      
+        padding-top: 20px;
         justify-content: center;
-      
-
+        align-items: center;
+     
         @include lg {
             display: flex;
             justify-content: center;
+            height: 590px;
         }
         
       
@@ -50,6 +53,27 @@
             margin-top: 30px;
             font-size: 14px;
         }
+        .card-title {
+          text-align: center;
+        }
+        button {
+        border: none;
+       
+          display: flex;
+          justify-content: space-between;
+          width: 100%;
+          height: 75px;
+          align-items: center;
+          h4 {
+          margin: 0 !important;
+        
+          }
+          
+        }
+        
+        .card-oldprice {
+        text-decoration: line-through;
+        }
     }
     
     .card-image {
@@ -68,68 +92,105 @@
           height: auto;
         }
       }
-
-      .discount-card {
-       
-    display: block;
-   // margin: 5px;
-    grid-column: 1 / -1;
-  //  border: 1px solid black;
-    margin: 0 !important;
-
-    background-color: $color-white;
-    @include lg {
-        grid-column: 2 /2;
-        padding: 0;
-        margin-bottom: 20px !important;
     }
-       
 
-        h5 {
-            margin-top: 80px;
-            text-align: center;
-            color: $color-theme-1;
-            font-weight: $font-weight-bold;
-            font-size: 18px;
-            margin-bottom: 20px !important;
+      .dcard {
+        display: block;
+      grid-column: 1 / -1;
+        border: none;
+        font-family: $font-poppins;
+        justify-content: center;
+        margin: 0 0 20px;
+        background-color: $color-white;
+     
+
+        @include lg {
+          display: block;
+          grid-column: 2 / 2;
          
+        }
+        .dcard-content {
+          max-height: 300px;
+          height: 100%;
+          display: grid;
+          justify-content: center;
+          align-items: center;
+          position: relative;
+
+          @include xl {
+            max-height: 300px;
+            height: 100%;
+          }
+       
+        }
+        h5 {
+          margin-top: 40px;
+            color: $color-theme-1;
+            text-align: center;
+            font-size: 18px;
+            font-weight: $font-weight-bold;
+
+   
         }
         h1 {
-            font-family:$font-playfair;
-            font-weight: $font-weight-bold;
-            text-align: center;
-           font-size: 48px;
-           margin-bottom: 20px !important;
-           
-         
+          text-align: center;
+          //  margin-top: 20px;
+            font-size: 48px;
+            font-family: $font-playfair;
         }
         h3 {
-            font-family: $font-poppins;
-            font-weight: $font-weight-bold;
-            font-size: 14px;
-            text-align: center;
-            margin: 0 !important;
-           
-         
+          text-align: center;
+          font-family: $font-poppins;
+          font-size: 24px;
+          font-weight: $font-weight-bold;
         }
+  
+    
        .bText {
-           display: block;
+        
             justify-content: center;
-            align-items: center;
+          
            text-align: center;
-          padding: 20px  40px 0 40px;
-            margin-bottom: 50px;
+          padding:0;
+         
             font-size: 14px;
           
             
         } 
+    
         .card-body {
+         
             display: flex;
             justify-content: center;
+            align-items: center;
             width: 100%;
             font-size: 12px;
+            margin-bottom: 20px;
+          
+
+            @include lg {
+              margin-top: 40px;
+            }
+
+            button {
+              border: none;
+              
+              //margin: 20px;
+           
+              width: 100%;
+            height: 75px;
+              font-size: 16px;
+
+              &:hover {
+                background-color: $color-white;
+                text-decoration: underline;
+                outline: none;
+                color: $color-theme-1
+              }
+
+         
+             }
         }
       
-      
       }
-}
+      
