--- a/css/scss/components/_header.scss
+++ b/css/scss/components/_header.scss
@@ -4,21 +4,23 @@ header {
     @include lg {
         padding: 30px 0;
     }
-    .container { 
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-        grid-template-areas: "logo btn "
-                                "menu menu";
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:    "logo toggle";
 
-        @include lg {
-            display: grid;
-            grid-template-columns: 1fr 2fr;
-            grid-template-areas: "logo menu ";
-                              
-    
+        @include lg  {
+            grid-template-columns: 4fr 4fr;
+            grid-template-areas:    "logo menulinks";
         }
 
-     }
+        @include xl {
+            grid-template-columns: 4fr 4fr 1fr;
+            grid-template-areas:    "logo menulinks menuicons";
+        }
+    }
 
     .logo {
         grid-area: logo;
@@ -29,26 +31,44 @@ header {
 
     }
 
-    #menu {
-        grid-area: menu;
-        font-family:  $font-poppins;
-        
-        @include lg {
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-        }
-      
-     
-        .menu-links   {
-            color: $color-dark-2;
-            padding-top: 30px;
 
+     
+        .menu-links {
+            grid-area: menulinks;
+          
+            color: $color-white;
+            font-family:  $font-poppins;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            width: 0vw;
+            padding-top: 80px;
+            transform: translateX(0%);
+            transition: all 0.25s;
+            font-size: 20px;
+            overflow: hidden;
+           
+            
             @include lg {
-                padding-top: 0px;
-            }
-            .link {
+                position: static;
+                width: 100%;
+                font-size: 16px;
+                padding: 0;
+                background-color: transparent;
                 color: $color-dark-2;
+                display: flex;
+                justify-content: flex-end;   
+                align-items: center;  
+            }
+    
+            @include xl {
+                margin-right: 20px;
+            }
+          
+            .link {
+                color: $color-dark-3;
                 display: block;
                 margin: 10px 20px;
                 padding:10px;
@@ -67,20 +87,34 @@ header {
                
             }
         }
-        .menu-icons {
-           
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            text-align: center;
-            padding: 20px;
+     
+            .menu-icons {
+                grid-area: menuicons;
+                text-align: center;
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                padding: 20px;
+                background-color: $color-dark-2;
+                color: $color-white;
+              opacity: 0.85;
+                z-index: 1;
 
-            @include lg {
-               position: static;
-               padding: 0px;
-
-            }
+                @include md {
+                    background-color: $color-dark-1;
+                    opacity: 0.85;
+                    height: 50px;
+                }
+                @include lg {
+                    position: static;
+                    padding: 0;
+                    background-color: transparent;
+                    display: flex;
+                    justify-content: flex-end;
+                    align-items: center;
+                }
+        
             .link {
                 color: $color-dark-4;
                 margin-left: 15px;
@@ -90,18 +124,14 @@ header {
 
             }
         }
-    }
+  
 
-    .btn-toggle {
-     
-        grid-area: btn;
-        display: grid;
-        justify-self: flex-end;
-        align-items: center;
-        width: 35px;
-        height: 35px;
-        padding: 5px;
-
+    .toggle {
+        grid-area: toggle;
+        position: relative;
+        display: block;
+        text-align: right;
+        z-index: 1;
 
         @include lg {
             display: none;
