--- a/css/scss/components/_subscribe.scss
+++ b/css/scss/components/_subscribe.scss
@@ -1,5 +1,13 @@
 .subscribe {
    display: block;
+   background-color: $color-dark-4;
+
+   @include lg {
+    height: 470px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   }
     .container {
         display: flex;
      
@@ -11,14 +19,19 @@
 
     @include lg {
         padding-left: -5000px;
+        height: 212px;
+        background-color: $color-white;
     }
         }
     .mail-text {
+      display: none;
         position: absolute;
-        left: 15px;
+        left: 35px;
+        bottom: 40px;
         width: 80%;
+        height: 40px;
         border-radius: 40px;
-        border: 1px solid $color-dark-4;
+        border: 1px solid $color-border-1;
         padding: 5px;
         text-indent: 10px;
 
@@ -27,35 +40,99 @@
            outline: none;
           }
         @include lg {
-           
+           display: block;
             font-size: 1rem;
             width: 70%;
-            //margin-left: 60px;
+            bottom: 70px;
             left: 130px;
             padding: 10px;
+            height: 60px;
          
         }
     }
+    .mail-text-m {
+      display: block;
+      position: absolute;
+      left: 35px;
+      bottom: 40px;
+      width: 80%;
+      height: 40px;
+      border-radius: 40px;
+      border: 1px solid $color-border-1;
+      padding: 5px;
+      text-indent: 10px;
+
+
+      &:focus {
+         outline: none;
+        }
+      @include lg {
+         display: none;
+          font-size: 1rem;
+          width: 70%;
+          bottom: 70px;
+          left: 130px;
+          padding: 10px;
+          height: 60px;
+       
+      }
+  }
     .s_button {
-        
-        position: absolute;
-     right: 15px;
+        display: none;
+      position: absolute;
+      right: 15px;
+      bottom: 40px;
+      height: 40px;
       background-color: $color-theme-1;
       color: $color-white;
       border-left:none;
-      border-top:  1px solid $color-dark-4;
-      border-right:  1px solid $color-dark-4;
-      border-bottom:  1px solid $color-dark-4;
+      border-top:  1px solid $color-theme-1;
+      border-right:  1px solid $color-theme-1;
+      border-bottom:  1px solid $color-theme-1;
         font-size: 0.6rem;
         border-radius: 40px;
         &:hover {
             background-color: $color-dark-2;
+            border-top:  1px solid $color-dark-2;
+            border-right:  1px solid $color-dark-2;
+            border-bottom:  1px solid $color-dark-2;
             transition: all 0.5s;
           }
           @include lg {
+            display: block;
             right: 130px;
-          //  margin-right: -20px;
+            bottom: 70px;
             font-size: 1rem;
+            height: 60px;
           }
     }
+    .s_button-m {
+      display: block;
+    position: absolute;
+    right: 30px;
+    bottom: 40px;
+    height: 40px;
+    background-color: $color-theme-1;
+    color: $color-white;
+    border-left:none;
+    border-top:  1px solid $color-theme-1;
+    border-right:  1px solid $color-theme-1;
+    border-bottom:  1px solid $color-theme-1;
+      font-size: 0.8rem;
+      border-radius: 40px;
+      &:hover {
+          background-color: $color-dark-2;
+          border-top:  1px solid $color-dark-2;
+          border-right:  1px solid $color-dark-2;
+          border-bottom:  1px solid $color-dark-2;
+          transition: all 0.5s;
+        }
+        @include lg {
+          display: none;
+          right: 160px;
+          bottom: 70px;
+          font-size: 1rem;
+          height: 60px;
+        }
+  }
 }
