--- a/css/scss/components/_topSelling.scss
+++ b/css/scss/components/_topSelling.scss
@@ -7,8 +7,12 @@
         justify-content: center;
         align-items: center;
         padding: 30px;
-        font-size: 30px;
+        font-size: 20px;
         font-weight: $font-weight-semibold;
+
+        @include lg {
+          font-size: 30px;
+        }
     }
     .content {
        
@@ -75,15 +79,21 @@
     
       .card-title {
         margin: -10px 0 -0 -10px !important;
-        font-size: 15px;
+        font-size: 8px;
         color: $color-dark-1;
+
+        @include lg {
+          font-size: 15px;
+        }
       }
       .card-body {
+        border-bottom: 1px solid $color-dark-5;
         p {
           display: none;
         }
         @include lg {
           p {
+            margin: 10px 0 -0 -10px !important;
             display: block;
           }
         }
@@ -99,13 +109,29 @@
           display: none;
         }
       }
+
+      .posts {
+        display: none;
+        margin: 10px 0 -0 -10px !important;
+        justify-content: flex-start;
+
+        @include lg {
+          display: flex;
+        }
+        h4 {
+          font-size: 12px;
+          color: $color-dark-4;
+          margin-right: 20px;
+        }
+
+      }
       ._bDiscount {
         margin-top: 60px;
         display: grid;
         grid-auto-flow: column;
         gap: 20px;
         justify-content: center;
-        border: 1px solid black;
+        // border: 1px solid black;
     }
     }
 
