--- a/css/scss/components/_utilities.scss
+++ b/css/scss/components/_utilities.scss
@@ -2,7 +2,18 @@
 .no-gutters {
     --bs-gutter-x: 0 !important;
   }
- 
+
+.open-menu {
+    width: 100vw !important;
+    opacity: 0.95;
+    transform: translateX(-100%);
+    background-color: $color-dark-1;
+}
+
+.invalid {
+    border: 1px solid $color-theme-1 !important;
+} 
+
 html, body {
     
     font-size: 16px;
@@ -49,6 +60,7 @@ font-weight: $font-weight-regular;
         color: $color-white;
     }
 }
+
 
 footer {
     div {
