--- a/css/scss/core/_colors.scss
+++ b/css/scss/core/_colors.scss
@@ -11,6 +11,8 @@ $color-dark-3: #636363;
 $color-dark-4: #AEAEAE;
 $color-dark-5: #FAFAFA;
 
+$color-border-1: #E1E1E1;
+
 $color-yellow: #F9c936;
 $color-green: #92BBB9;
 
