--- a/css/scss/components/_topSelling.scss
+++ b/css/scss/components/_topSelling.scss
@@ -133,5 +133,10 @@
         justify-content: center;
         // border: 1px solid black;
     }
+
+    .arrowslide  {
+      display: flex;
+      justify-content: center;
+    }
     }
 
