--- a/css/scss/components/_bestCollection.scss
+++ b/css/scss/components/_bestCollection.scss
@@ -113,4 +113,10 @@
         }
       }
     }
+
+    .loadmore {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 40px;
+    }
   }    
